force-app/main/default/objects/Compensation__c/Compensation__c.object-meta.xml
<CustomObject>
    <label>Compensation</label>
    <nameField>
        <displayFormat>CMP-{0000}</displayFormat>
        <label>Compensation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compensations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>