force-app/main/default/objects/Compensation__c/fields/Base_Pay__c.field-meta.xml
<CustomField>
    <fullName>Base_Pay__c</fullName>
    <description>Employee base pay hourly or salary</description>
    <label>Base Pay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>