force-app/main/default/objects/Compensation__c/fields/DA__c.field-meta.xml
<CustomField>
    <fullName>DA__c</fullName>
    <description>Dearness Allowance</description>
    <label>DA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>