force-app/main/default/objects/Compensation__c/fields/EPF__c.field-meta.xml
<CustomField>
    <fullName>EPF__c</fullName>
    <label>EPF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>