force-app/main/default/objects/Compensation__c/fields/HRA__c.field-meta.xml
<CustomField>
    <fullName>HRA__c</fullName>
    <description>House Rent Allowance for Employee</description>
    <label>HRA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>