force-app/main/default/objects/Compensation__c/fields/Mediclaim__c.field-meta.xml
<CustomField>
    <fullName>Mediclaim__c</fullName>
    <label>Mediclaim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>