force-app/main/default/objects/Compensation__c/fields/Net_Salary__c.field-meta.xml
<CustomField>
    <fullName>Net_Salary__c</fullName>
    <description>Employee Net Salary</description>
    <label>Net Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>